app/styles/app.scss
@import 'bootstrap';
@import 'bootstrap/theme';

$background: rgb(198, 198, 198);
$black: rgb(0,0,0);
$blue: rgb(26, 117, 255);
$grey: #808080;
$red: #8B0000;
$riff-time: rgb(179, 179, 179);
$white: rgb(255,255,255);

body {
  background-color: $background;
}

h4 {
  margin-bottom: 20px;
  margin-left: -15px;
  margin-top: -10px;
}

li {
  margin-left: 0;
}

ul {
  list-style: none;
  padding-left: 0;
}

.about-us {
  margin: 70px 100px;
}

.cancel-riff-btn {
  background-color: $white;
  height: 31px;
}

.change-password-form {
  margin: 100px;
}

.change-vid-btn {
  height: 40px;
  margin-top: 3.8px;
}

.chat-box {
  -moz-appearance: textfield-multiline;
  -webkit-appearance: textarea;
  background-color: $black;
  border-radius: 5px;
  height: 325px;
  overflow: auto;
  padding: 2px;
  resize: both;
  width: 100%;

  @media (max-width: 992px) {
    width: 640px;
  };
}

.clear-class {
  clear: both;
}

.container {
  margin: 0;
}

.create-riff-box {
  background-color: $black;
  border-color: black;
  border-radius: 5px;
  color: $white;
  height: 33px;
  margin-top: 2px;
  padding-left: 5px;
  padding-top: 4px;
  width: calc(100% - 52.5px);

  @media (max-width: 992px) {
    width: calc(640px - 52.5px);
  };

  @media (max-width: 698px) {
    width: calc(100% - 52.5px);
  }
}

.create-riff-btn {
  background-color: $white;
  margin-top: -25px;
  position: relative;
  width: 48.5px;
}

.edit-email {
  margin: -4px 0 6px 0;
}

.edit-riff-box {
  -moz-appearance: textfield-multiline;
  -webkit-appearance: textarea;
  background-color: $black;
  border: 1px solid $grey;
  border-color: $black;
  border-radius: 5px;
  color: $white;
  height: 300px;
  overflow: auto;
  padding: 5px;
  resize: both;
  width: 100%;

  @media (max-width: 992px) {
    width: 640px;
  };
}

.edit-riff-btn {
  background-color: $white;
  clear: both;
  height: 31px;
}

.edit-riff-panel {
  height: 33px;
  margin-top: 2px;
  width: calc(100% - 52.5px);

  @media (max-width: 992px) {
    width: calc(640px - 52.5px);
  };

  @media (max-width: 698px) {
    width: calc(100% - 52.5px);
  }
}

.flag-riff-button {
  clear: both;
  height: 31px;
}

.navbar-form {
  margin-top: 2px;
}

.one-riff {
  font-size: 15px;
  margin-left: 5px;
  padding-left: 22px;
  text-indent: -22px;
}

.other-riff {
  color: $blue;
  font-size: 11px;
}

.user-riff {
  color: $red;
  font-size: 11px;
}

.riff-stamp {
  color: $riff-time;
  font-size: 11px;
}

.riff-text {
  color: $white;
}

.riff-user {
  color: $blue;
}

.search-box {
  height: 40px;
  margin-top: 4px;
}

.search-btn {
  display: inline-block;
  float: left;
}

.search-form {
  margin-left: auto;
  margin-right: auto;
}

.search-li {
  height: 50px;
}

.sign-in-wrap {
  margin: 100px;
}

.sign-up-wrap {
  margin: 100px;
}

.html5-video-player {
  border-radius: 5px;
}

